Avoid adding a y-scrollbar for the content div on the Problems page

--- a/ext/scss/problems.scss
+++ b/ext/scss/problems.scss
@@ -1,3 +1,8 @@
+div#content {
+  // Avoid adding a vertical scrollbar after using visibility: collapse
+  overflow-y: hidden;
+}
+
 table.results {
   td.satoriEnhancementsProblemHide {
     text-align: center;
